src/main/java/com/example/tomyongji/global/error/ErrorResponse.java
package com.example.tomyongji.global.error;

import lombok.Data;

@Data
public class ErrorResponse {
    private int statusCode;
    private String message;

    public ErrorResponse(int statusCode, String message) {
        this.statusCode = statusCode;
        this.message = message;
    }
}
